war/src/main/webapp/engines/jahia-anthracite/_components.scss
/* ... */
.x-window.preview-window {

	.gwt-TextArea-readonly {
		background: _theme-color(secondary, d);
		border: none !important;
		width: 100% !important;
		margin: 4px 0;
		box-sizing: border-box;
		padding: 8px;
	}

}

.x-window-plain.x-window-dlg {
	z-index: 99999999 !important;
}

.x-window-plain.x-window-dlg span.ext-mb-text > span {
	color: #ffeb3b !important;	// <=== To theme (create variable).
	font-weight: 600;
	font-size: 13px;
	top: 2px;
	position: relative;
}


// Image edit modal

.x-window.image-crop {

	.x-component.x-column-layout-ct .x-column-inner .x-form-field-wrap.x-component.x-column {
		margin-top: 24px;
		margin-right: 16px;
		margin-bottom: 8px;
	}

	table.x-toolbar-ct {
		float: right;
	}

}

.x-window.image-rotate {

	.x-window-body {
	    min-height: 72px;
	}

	table.x-toolbar-ct {
		float: right;
	}

}

.x-window.image-resize {

	.x-window-body {
	    min-height: 270px;
	}

	table.x-toolbar-ct {
		float: right;
	}

}


/////////////////////////////////////////////////
// COMPARE PANEL ////////////////////////////////
/////////////////////////////////////////////////


.x-window.compare-engine {
	background: _theme-color(primary, a) !important;

	.x-window-header {
		height: 64px !important;
		line-height: 64px;
		padding-left: 16px !important;
		margin-top: 5px;

		> .x-component:first-child {
			margin-top: 22px;
			margin-right: 16px;
			pointer-events: all;

			table tbody tr td .x-tool-close {
				height: 22px;
				width: 22px;
				background-image: url(./images/icon-close-large.png);
				background-position: initial !important;
			}

		}

		.x-window-header-text {
			text-shadow: none;
			border: none;
			padding: 0;
			border-radius: 0;
			background: transparent;
			box-shadow: none;
			margin-bottom: 10px;
			pointer-events: none !important;
			font-family: "Raleway", sans-serif;
			font-size: 24px;
			color: _theme-color(secondary, a); /* TO THEME */
			font-weight: 100;
		}

	}

	.x-panel-toolbar .x-tool-restore {
		display: none;
	}

	.x-panel-header,
	.x-toolbar {
		background: _theme-color(primary, d); /* TO THEME */
		border: 1px solid _theme-color(primary, d); /* TO THEME */
		color: _theme-color(secondary); /* TO THEME */
	}

	.x-panel-bwrap {

		button {
			margin-left: 10px;
			margin-bottom: 1px;

			img {
				background: url(./images/icons/ic_refresh.png) !important;
				background-size: 18px 18px !important;
				background-repeat: no-repeat !important;
				left: 0 !important;
				top: 0 !important;
				opacity: .64;
			}

		}

		.x-toolbar-right button img {
			background: url(./images/icons/ic_more_vert_white_.png) !important;
			background-size: 19px 19px !important;
			background-repeat: no-repeat !important;
			left: -6px !important;
			top: -2px !important;
		}

		.x-btn-mc button.x-btn-text {
			text-transform: uppercase;
			padding: 0 4px !important;
			font-weight: 500;
			color: _theme-color(primary, g); /* TO THEME */
		}

		table.x-btn-pressed .x-btn-mc button.x-btn-text {
			color: _theme-color(status, warning); /* TO THEME */
		}

	}

	.x-panel:last-child {
		border-left: 1px solid _theme-color(primary, d); /* TO THEME */
	}

	.x-form-field-wrap.x-component {
		background: _theme-color(secondary, a); /* TO THEME */
		margin-left: 12px;
	}

	.action-bar-tool-item .x-btn-mc button.x-btn-text img {
		display: none;
	}

}
/* ... */

